@@ -52,8 +52,9 @@ Version 3.97  [ 21 November, 2003 ] - Third prerelease for version 4.0.
         Class PacketChooser:
             - New routine hasPackets() to detect empty packet choosers.
         Class ReginaPart:
-            - Make File -> Save (as opposed to File -> Save As) work with
-              new files.
+            - Make File/Save fall back to File/Save-As for new files.
+            - Make File/Save-As respect the automatic file extension setting
+              and also check whether the selected file already exists.
         Class ReginaPreferences, ReginaPrefSet:
             - Many new configuration options.  In addition to those
               mentioned above, census data files and Python libraries can
